Checking one feature

--- a/soft_conf.html
+++ b/soft_conf.html
@@ -357,7 +357,7 @@ img {
 <p>4.5	Changing the authorization status </p>
 <p>4.6	Changing subscriber properties</p>
 <h4>5. Configuration via VTY</h4>
-<p>5.1 Connecting </p>
+<p>5.1 Log in </p>
 <p>5.2 Privileged Node </p>
 <p>5.3 Configuration Node</p>
 <p>5.4 Network Configuration</p>
@@ -446,19 +446,19 @@ The GSM network can be divided into following parts.</p>
 <h4>Mobile Station (MS)</h4>
 <p>is made up of two components:</p>
 <ul>
-<li><p><strong>1. Mobile Equipment (ME)</strong> refers to the physical phone itself.</p></li>
+<li><p><strong><u>1. Mobile Equipment (ME)</u></strong> refers to the physical phone itself.</p></li>
 <li>
-<p><strong>2. Subscriber Identity Module (SIM)</strong> is a small smart card that carries information specific to the subscriber, such as IMSI, TMSI, Ki (used for encryption), Service Provider Name (SPN), and Local Area Identity (LAI). </p>
+<p><strong><u>2. Subscriber Identity Module (SIM)</u></strong> is a small smart card that carries information specific to the subscriber, such as IMSI, TMSI, Ki (used for encryption), Service Provider Name (SPN), and Local Area Identity (LAI). </p>
 </li>
 </ul>
 <h4>Base Station Subsystem (BSS)</h4>
 <p>consists of two elements:</p>
 <ul>
 <li>
-<p><strong>1. Base Transceiver Station (BTS)</strong> responsible for carrying out radio communications between the network and the MS,it handles speech encoding, encryption, multiplexing (TDMA), and modulation/demodulation of the radio signals.</p>
+<p><strong><u>1. Base Transceiver Station (BTS)</u></strong> responsible for carrying out radio communications between the network and the MS,it handles speech encoding, encryption, multiplexing (TDMA), and modulation/demodulation of the radio signals.</p>
 </li>
 <li>
-<p><strong>2. Base Station Controller (BSC)</strong> handles allocation of radio channels, frequency administration, power and signal measurements from the MS, and handovers from one BTS to another.</p>
+<p><b>2. Base Station Controller (BSC)</b> handles allocation of radio channels, frequency administration, power and signal measurements from the MS, and handovers from one BTS to another.</p>
 </li>
 </ul>
 <h4>Network Switching Subsystem (NSS)</h4>
