Font problem testing

--- a/soft_conf.html
+++ b/soft_conf.html
@@ -1060,7 +1060,7 @@ enable handover in <u>osmo-nitb</u> configuration <em>etc/osmocom/openbsc.cfg</e
 
 
 
-<p><u>NOTE:</u> <i>Handover configuration available through the VTY command line. See below at <u>5.4 Network configuration</u> chapter</i></p>
+<p><b>NOTE:</b> <i>Handover configuration available through the VTY command line. See below at <u>5.4 Network configuration</u> chapter</i></p>
 
 <a name="3.FreeSWITCH Configuration"></a><h4>3. FreeSWITCH Configuration<a class="anchorlink" href="#3.FreeSWITCH Configuration"></a></h4>
 <p>FreeSWITCH is a scalable open source cross-platform telephony platform designed to route and interconnect popular communication protocols using audio, video, text or any other form of media.
