--- a/soft_conf.html
+++ b/soft_conf.html
@@ -510,7 +510,7 @@ use of effective voice compression algorithms.</p>
 <p>Independent Base stations (UmSITE) can be clustered through a distributed HLR connected via peer to peer links</p>
 <p><img src="http://s020.radikal.ru/i709/1501/40/96d0dd3429eb.png" /></p>
 <h4>Core Network</h4>
-<p>The <strong>UmCORE</strong> technology provides synchronization across distributed UmSITE installations, and enables integration with existing networks via VoIP and SS7.</p>
+<p>The UmCORE technology provides synchronization across distributed UmSITE installations, and enables integration with existing networks via VoIP and SS7.</p>
 <p>Features include:</p>
 <ul>
 <li>1. System management console</li>
@@ -1060,7 +1060,7 @@ enable handover in <u>osmo-nitb</u> configuration: <em>etc/osmocom/openbsc.cfg</
 
 
 
-<p><b>NOTE:</b> <i>Handover configuration available through the VTY command line. See below at <u>5.4 Network configuration</u> chapter</i></p>
+<p><strong>NOTE:</strong>Handover configuration available through the VTY command line. See below at <u>5.4 Network configuration</u> chapter</i></p>
 
 <a name="3.FreeSWITCH Configuration"></a><h4>3. FreeSWITCH Configuration<a class="anchorlink" href="#3.FreeSWITCH Configuration"></a></h4>
 <p>FreeSWITCH is a scalable open source cross-platform telephony platform designed to route and interconnect popular communication protocols using audio, video, text or any other form of media.
