--- a/how_to's.html
+++ b/how_to's.html
@@ -428,7 +428,7 @@ Follow the steps below described in UHD installation chapter.</p>
 <p>UmTRX driver is a loadable module for the UHD library, so the main UHD library is required for the UmTRX driver to operate. Loading UmTRX driver allows any of the myriad of UHD applications to work with UmTRX just like with any other UHD compatible device. Below we describe how to install the UHD library and UmTRX module for it.</p>
 <p>The UHD version supported by the current UmTRX driver is 003.008.</p>
 <p><strong>NOTE:</strong> <em>The binary downloads from Ettus have module support disabled and does not work with UmTRX.</em></p>
-<p>If you’re an Ubuntu user, you can download UHD library built with loadable modules support from <a href="https://launchpad.net/~guruofquality/+archive/ubuntu/pothos/+packages">Josh Blum’s PPA:</a></p>
+<p>If you are an Ubuntu user, you can download UHD library built with loadable modules support from <a href="https://launchpad.net/~guruofquality/+archive/ubuntu/pothos/+packages">Josh Blum PPA:</a></p>
 <pre><code>$ sudo apt-get install python-software-properties
 $ sudo add-apt-repository ppa:guruofquality/pothos
 </code></pre>
