--- a/umsite.html
+++ b/umsite.html
@@ -438,10 +438,9 @@ img {
 <li>&#8226 Clocking: OCXO / GPS disciplined</li>
 </ul>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
-<br>
 <p>Base station comes with already installed and configured software, just attach GPS and GSM antennas, power supply.</p>
 
-<p><h3>Note:</h3> Base station comes with already installed and configured software, just attach GPS antenna, GSM antennas and power supply.</p>
+<p><strong>NOTE:</strong> Base station comes with already installed and configured software, just attach GPS antenna, GSM antennas and power supply.</p>
 
 <p>Steps:</p>
 
@@ -449,7 +448,7 @@ img {
 <li> Attach GSM antennas. We recommend having at least 10 ft (3m) between them</li>
 <li> Attach GPS antenna. Good antenna visibility to the sky is required</li>
 <li> Turn on Base station</li>
-<p><h3>Note:</h3> GSM antennas are not included in a standard package. We do not recomend to operate base station without antennas</p>
+<p><strong>NOTE:</strong> GSM antennas are not included in a standard package. We do not recomend to operate base station without antennas</p>
 <h4><a name="2.1 Antennas installation"></a>2.1 Antennas installation<a class="anchorlink" href="#2.1	Antennas installation"></a></h4>
 <p>Each of both antennas complement each other. The second antenna must have the same position as the first antenna on a mast as well as the same direction and incline angle to the ground. </p>
 <p>For the GPS antenna, there are no strict requirements only good antenna visibility to the sky</p>
@@ -457,7 +456,7 @@ img {
 <hr />
 <p>For the mast at least of 100 ft (30m) in height, antennas can be mounted upright within the 10 ft (3m) distance between each other.</p>
 <p><img src="http://s50.radikal.ru/i130/1507/7a/eb8b60961081.png" /></p>
-<p><h3>NOTE:</h3></p>
+<p><strong>NOTE:</strong></p>
 <p>&#8226TRX1 has a <a href="https://en.wikipedia.org/wiki/Broadcast_control_channel">Beacon (Broadcast) Channel (BCCH) </a></p>
 <p>&#8226TRX2 serves as traffic channels (<a href="http://www.althos.com/tutorial/GSM-tutorial-traffic-channels.html">TCH</a>)</p>
 <p>Therefore TRX1 antenna  has to be situated below TRx2 antenna. In other case, it may cause call disconnection If the connection would be established when the TRx1 antenna is higher and then has assigned to a timeslot of the lower antenna TRX2.  
@@ -473,7 +472,7 @@ img {
 <p>&#8226 Make sure that Ethernet cable connected.</p>
 </li>
 
-<p><h3>Note:</h3>We strongly recommend does not put UmSITE on a public network. Connect it to your local network where is access to Internet through NAT or Firewall. Keep <u>UDP port 1195</u> open on your server for fairwaves VPN in case technical support</p>
+<p><strong>NOTE:</strong> We strongly recommend does not put UmSITE on a public network. Connect it to your local network where is access to Internet through NAT or Firewall. Keep <u>UDP port 1195</u> open on your server for fairwaves VPN in case technical support</p>
 <p><img src="http://s019.radikal.ru/i633/1505/04/7e1b573f0b89.png" /></p>
 <p>Take any GSM phone with any SIM card and try to search the network. Network might have a different names such as <u>Fairwaves, 1011, Test, etc.</u></p>
 <h4><a name="2.3 Test call"></a>2.3 Test call<a class="anchorlink" href="#2.3 Test call"></a></h4>
@@ -512,7 +511,7 @@ img {
 
 <p>In order to configure <strong>UmSITE</strong>, you have to login into device remotely over SSH. Interface configured to obtain IP address via DHCP and also has a static <u>192.168.50.100</u></p>
 <p>Connect laptop to the UmDESK/UmSITE via Ethernet cable.</p>
-<p><h3>NOTE:</h3> Make sure your interface in the same subnet as the UmSITE/UmDESK and has IP like <u>192.168.50.101</u>
+<p><strong>NOTE:</strong> Make sure your interface in the same subnet as the UmSITE/UmDESK and has IP like <u>192.168.50.101</u>
 </p>
 <ol>
 <li>1. Run PuTTY
@@ -525,7 +524,7 @@ img {
 <p>Once you logged in, you will get access to Linux terminal. </p>
 <p>You may use a deferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY"><strong>www.putty.org</strong></a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
 <h4>Login over Serial cable (Only for UmSITE)</h4>
-<p>Serial connection allows  you to look over the system on the booting level.</p>
+<p>Serial connection allows you to choose boot options and log into the system if network connection is not available.</p>
 <p>You'll get options like:</p>
 <ol>
 <ol>
@@ -550,7 +549,7 @@ img {
 <p>Refer to <a href="https://help.ubuntu.com/14.04/ubuntu-help/index.html"><strong>Ubuntu</strong></a> documentation for details
 </p>
 
-<p><h3>Note:</h3> Base station configured to get IP address through DHCP.
+<p><strong>NOTE:</strong> Base station configured to get IP address through DHCP.
 We also recommend to keep configuration for the
 <u>eth1:1</u> (192.168.50.50/24), because it's used as a backup IP address. If you
 want to configure a statis IP address, change <u>eth1</u> configuration.</p>
